arrival and departure
